# tiny-dag

./: README.md  graph.py  sample.py  setup.cfg  tests.py
src/tinydag/: graph.py  node.py
tests/: test_graph.py
