[metadata]
name = tiny-dag
version = 0.0.1
author = Ossi Myllymäki
author_email = omyllymaki@gmail.com
description = Mimimal DAG implementation with Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omyllymaki/tiny-dag
project_urls =
    Bug Tracker = https://github.com/omyllymaki/tiny-dag/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    graphviz


[options.packages.find]
where = src